# PINNs

./: Instruction.md  README.md  data_format.md  main.py  pyproject.toml
training_data/: pressure.npy  r_grid.npy  theta_grid.npy  thickness.npy
