[project]
name = "pinns"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lightning>=2.5.1.post0",
    "pinnstorch>=0.1.2",
    "requests>=2.32.3",
    "torch>=2.7.1",
    "numpy>=1.19.2",
    "matplotlib>=3.3.2",
    "scipy>=1.6.0"
]
